feat: start implementing authentication
